	* Fixed bug #14085: htmlArea RTE: Setting empty color raises js error in IE
	* Fixed bug #14086: htmlArea RTE: Small css glitch in the color setting dialogue
	* Added feature #14094: htmlArea RTE: Optionally add rel attribute to link dialogue
	* Added feature #14014: htmlArea RTE should use versionnumbering method for CSS and JS files

2010-04-13  Steffen Kamper  <info@sk-typo3.de>

	* Added testcase for #13698 (thanks to Oliver Klee)
	* Added Feature #13698: Add proxy for the mail() function (thanks to Tolleiv Nietsch)
	* Added Feature #13982: Feature: Renewal of the taskcenter Part III (thanks to Georg Ringer)
	* Added Feature #13982: Feature: Renewal of the taskcenter Part II (thanks to Georg Ringer)
	* Added Feature #13982: Feature: Renewal of the taskcenter Part I (thanks to Georg Ringer)
	* Fixed bug #14061: Do not die, be the exception!
	* Added Feature #13799: ExtJS driven fading in/out Flashmessages
	* Corrected spelling errors in felogin manual
	* Added Feature #12229: Add stdWrap date/strftime with GMT format property
	* Fixed bug #13402: Active suggest feature for TCA fields with foreign tables
	* Fixed bug #13788: [felogin] Redirects use incorrect function parameters
	* Updated manual of felogin (thanks to Jigal van Hemert and Jeff Segars)
	* Reverted Update #14063: Updated ExtJs library from 3.1.1 to 3.2 Final

2010-04-12  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #14065: Add hook for including Static TypoScript after all Static Templates are included

2010-04-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13116: htmlArea RTE: Allow to hide counting classes
	* Fixed bug #13674: htmlArea RTE: Incorrect position of cursor after SHIFT-ENTER in WebKit browser
	* Follow-up to bug #14066: htmlArea RTE: Erratic handling of oncut and onpaste events
	* Updated NEWS.txt as follow-up to #13580: htmlArea RTE: Extjize the RTE
	* Fixed bug #14084: htmlArea RTE: RTE fails in absence of wizards